@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.7.40) unstable; urgency=low
 
-  * 
+  * http-cache: fixed NULL pointer dereference when storing empty response
+    body in memcached
 
  --
 
